@startuml ArchLevel2

allowmixing

skinparam packageStyle rectangle
skinparam packageBackgroundColor White

package "putty-rs CLI" {
    class CLI
}

package "putty_grpc_server" {
    class RemoteConnection {
        + CreateRemoteConnection
        + Read
        + Write
        + Stop
    }
}

package "putty_storage" {
    class Profile
    class ProfileStore {
        + list
        + save
        + delete
    }
    ProfileStore --> Profile
}

package "Python gRPC client" {
    class RemoteConnectionStub {
        + CreateRemoteConnection
        + Read
        + Write
        + Stop
    }
}

package "putty_core" {
    class ConnectionIOHandle
    class ConnectionManager
     {
        + add_connection
        + subscribe
        + write_bytes
        + stop_connection
    }
    ConnectionManager "1" *-- "*" ConnectionIOHandle
}

package Connections {
    interface Connection {
        + connect
        + disconnect
        + read
        + write
    }
    class SerialConnection {}
    class SshConnection {}
    Connection <|-- SerialConnection
    Connection <|-- SshConnection
}

CLI --> ConnectionManager
CLI --> ProfileStore
RemoteConnectionStub --> RemoteConnection
RemoteConnection --> ConnectionManager
RemoteConnection --> ProfileStore
ConnectionIOHandle --> Connection
ConnectionManager --> Connection

@enduml
